<resources>
    <string name="app_name" translatable="false">ProyectoPDM2025-GT03-Grupo5-Gestion_de_Gastos_Personales_Mensuales</string>
    <string name="text_analisisDeGastos" translatable="false">Análisis de gastos</string>
    <string name="flecha" translatable="false">Flecha</string>
    <string name="calendario" translatable="false">Calendario</string>
    <string name="categoriaSeleccion" translatable="false">Categoria</string>
    <string name="periodoSeleccion" translatable="false">Periodo</string>
    <string name="grafico" translatable="false">Grafico</string>
    <string name="mes1Seleccion" translatable="false">Mes1</string>
    <string name="mes2Seleccion" translatable="false">Mes2</string>
    <string name="comparar_dos_meses">Comparar dos meses</string>
    <string name="gasto_promedio_mensual">Gasto Promedio Mensual:</string>
    <string name="resumen_de_estadisticas">Resumen de estadisticas</string>
    <string name="categoria_con_mayor_gasto">Categoria con mayor gasto:</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="gasto_total_mes" translatable="false">Gasto total del mes</string>
    <string name="gasto_mensual" translatable="false">$ 1,250 Gastado en abril</string>
    <string name="resumen" translatable="false">Resumen</string>
    <string name="prespuesto" translatable="false">Presupuesto: $ 2,000</string>
    <string name="gasto_categoria" translatable="false">Gasto por categoria</string>
    <string name="porcentaje_objetivo" translatable="false">Porcentaje del objetivo alcanzado</string>
    <string-array name="opciones_spinner">
        <item>Mensual</item>
        <item>Semanal</item>
    </string-array>
    <string name="registro_gasto" translatable="false">Registro de Gasto</string>
    <string name="monto" translatable="false">Monto</string>
    <string name="ingrese_monto" translatable="false">Ingrese un Monto</string>
    <string name="descripcion" translatable="false">Descripción</string>
    <string name="ingrese_descripcion" translatable="false">Ingrese una descripcion</string>
    <string name="fecha" translatable="false">Fecha</string>
    <string name="categoria" translatable="false">Categoria</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>z


    <string-array name="menu_items">
        <item>Registrar gastos</item>
        <item>Análisis</item>
        <item>Establecer objetivos</item>
        <item>Categorías</item>
        <item>Exportar datos</item>
        <item>Crear recordatorios</item>
        <item>Configuración</item>
    </string-array>
</resources>