<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:background="#4B0082"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menuIcon2"
        android:layout_width="43dp"
        android:layout_height="42dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Línea 1 -->
        <View
            android:layout_width="32dp"
            android:layout_height="2dp"
            android:background="@color/white" />

        <!-- Línea 2 -->
        <View
            android:layout_width="32dp"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:background="@color/white" />

        <!-- Línea 3 -->
        <View
            android:layout_width="32dp"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:background="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="229dp"
        android:layout_height="0dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:width="117dp"
        android:text="@string/registro_gasto"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="90dp"
        android:text="@string/monto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TNGasto"
        android:layout_width="268dp"
        android:layout_height="45dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="00.00"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="228dp"
        android:text="@string/descripcion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="276dp"
        android:layout_height="96dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="276dp"
        android:hint="@string/ingrese_descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="283dp"
        android:layout_height="46dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="440dp"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_calendar"
        android:focusable="false"
        android:hint="MM/DD/YYYY"
        android:inputType="none"
        android:paddingEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="396dp"
        android:text="@string/fecha"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="121dp"
        android:layout_height="24dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="520dp"
        android:drawableEnd="@android:drawable/arrow_down_float"
        android:text="@string/categoria"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="600dp"
        android:background="#4B0082"
        android:text="Guardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>