<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Spinner
        android:id="@+id/spinnerPeriodo2"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/border_white_black"
        android:textColor="#000000"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="@string/periodoSeleccion,MissingConstraints,DuplicateClickableBoundsCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#4B0082"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_analisisDeGastos"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/flecha"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="49dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/calendario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_calendar_month_24" />

    <Spinner
        android:id="@+id/spinnerCategorias"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="88dp"
        android:background="#000000"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#000000"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/spinnerPeriodo"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="@string/periodoSeleccion" />

    <Spinner
        android:id="@+id/spinnerPeriodo"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:background="#000000"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#000000"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="@string/periodoSeleccion,MissingConstraints" />

    <View
        android:id="@+id/placeholder_graph"
        android:layout_width="330dp"
        android:layout_height="198dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/border_white_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="@string/grafico,MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="310dp"
        android:layout_height="90dp"
        android:background="@drawable/border_white_black"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_graph"
        app:layout_constraintVertical_bias="0.082"
        tools:ignore="MissingConstraints,VisualLintBounds">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#4B0082"
            android:backgroundTint="#4B0082"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="10sp"
            android:shadowColor="#9C27B0"
            android:text="@string/resumen_de_estadisticas"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasto_promedio_mensual"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria_con_mayor_gasto"
            android:textColor="#000000" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/comparar_dos_meses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinnerMes1"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:textColor="#000000"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_white_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="@string/mes1Seleccion,MissingConstraints" />

    <Spinner
        android:id="@+id/spinnerMes2"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:textColor="#000000"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_white_black"
        app:layout_constraintStart_toEndOf="@+id/spinnerMes1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="@string/mes2Seleccion,MissingConstraints" />

    <View
        android:id="@+id/view4"
        android:layout_width="243dp"
        android:layout_height="122dp"
        android:background="@drawable/border_white_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMes2"
        app:layout_constraintVertical_bias="0.666" />

</androidx.constraintlayout.widget.ConstraintLayout>